--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-dom": "18.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.32.4",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
