--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,12 @@ jobs:
         node-version: 18
     - name: Install dependencies
       run: npm ci
+    - name: Build Next.js app
+      run: npm run build
+    - name: Start Next.js app
+      run: npm start &
+    - name: Wait for Next.js app to start
+      run: sleep 10
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
@@ -25,3 +31,5 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - name: Stop Next.js app
+      run: kill $(lsof -t -i:3000) || true
